# tsc-rust

./: .gitignore  Cargo.toml
harness/: Cargo.toml
harness/src/: lib.rs
harness/src/harness/: collections_impl.rs  compiler_impl.rs  documents_util.rs  fakes_hosts.rs  harness_io.rs  harness_utils.rs  mod.rs  runnerbase.rs  source_map_recorder.rs  type_writer.rs  util.rs  vfs_util.rs  virtual_file_system_with_watch.rs  vpath_util.rs
harness/src/mocha/: mod.rs
harness/src/rust_helpers/: arena.rs
harness/src/rust_helpers/arena/: all_arenas_harness.rs  eq_arena.rs  has_arena_harness.rs  in_arena_harness.rs  mod.rs  option_in_arena_harness.rs
test_runner/: Cargo.toml
test_runner/src/: lib.rs
test_runner/src/rust_helpers/: test.rs
test_runner/src/test_runner/: compiler_runner.rs  mod.rs  runner.rs
test_runner/src/test_runner/unittests/: base64.rs  comments.rs  factory.rs  js_doc_parsing.rs  mod.rs  module_resolution.rs  paths.rs
test_runner/src/test_runner/unittests/config/: command_line_parsing.rs  initialize_ts_config.rs  mod.rs  project_references.rs  show_config.rs  tsconfig_parsing.rs
test_runner/src/test_runner/unittests/tsc_watch/: helpers.rs
typescript_rust/: .tree-sitter-lint.yml  Cargo.toml
typescript_rust/.tree-sitter-lint/local_rules/: Cargo.toml
typescript_rust/.tree-sitter-lint/local_rules/src/: lib.rs
typescript_rust/_tests/: baseline.rs
typescript_rust/scripts/: process_diagnostic_messages.rs
typescript_rust/src/: lib.rs  macros.rs
typescript_rust/src/compiler/: builder.rs  builder_public.rs  core.rs  core_public.rs  debug.rs  diagnostic_information_map_generated.rs  module_name_resolver.rs  module_specifiers.rs  path.rs  semver.rs  sourcemap.rs  sys.rs  tracing.rs  transformer.rs  tsbuild.rs  tsbuild_public.rs  utilities_public.rs  visitor_public.rs  watch.rs  watch_public.rs  watch_utilities.rs
typescript_rust/src/compiler/binder/: lines_0_500.rs  lines_1000_1500.rs  lines_1500_2000.rs  lines_2000_2500.rs  lines_2500_3000.rs  lines_3000_end.rs  lines_500_1000.rs  mod.rs
typescript_rust/src/compiler/checker/: lines_0_1000.rs  lines_10000_10500.rs  lines_1000_2000.rs  lines_10500_11000.rs  lines_11000_11500.rs  lines_11500_12000.rs  lines_12000_12500.rs  lines_12500_13000.rs  lines_13000_13500.rs  lines_13500_14000.rs  lines_14000_14500.rs  lines_14500_15000.rs  lines_15000_15500.rs  lines_15500_16000.rs  lines_16000_16500.rs  lines_16500_17000.rs  lines_17000_17500.rs  lines_17500_18000.rs  lines_18000_18500.rs  lines_18500_19000.rs  lines_19000_20000.rs  lines_20000_20500.rs  lines_2000_3000.rs  lines_20500_21000.rs  lines_21000_21500.rs  lines_21500_22000.rs  lines_22000_22500.rs  lines_22500_23000.rs  lines_23000_23500.rs  lines_23500_24000.rs  lines_24000_24500.rs  lines_24500_25000.rs  lines_25000_25500.rs  lines_25500_26000.rs  lines_26000_26500.rs  lines_26500_27000.rs  lines_27000_27500.rs  lines_27500_28000.rs  lines_28000_28500.rs  lines_28500_29000.rs  (+45 more)
typescript_rust/src/compiler/command_line_parser/: lines_0_1000.rs  lines_1000_1500.rs  lines_1500_2000.rs  lines_2000_2500.rs  lines_2500_2750.rs  lines_2750_3000.rs  lines_3000_end.rs  mod.rs
typescript_rust/src/compiler/emitter/: lines_0_1000.rs  lines_1000_1500.rs  lines_1500_2000.rs  lines_2000_2500.rs  lines_2500_3000.rs  lines_3000_3500.rs  lines_3500_4000.rs  lines_4000_4500.rs  lines_4500_5000.rs  lines_5000_5500.rs  lines_5500_end.rs  mod.rs
typescript_rust/src/compiler/factory/: base_node_factory.rs  emit_helpers.rs  emit_node.rs  node_converters.rs  node_tests.rs  parenthesizer_rules.rs  utilities.rs  utilities_public.rs
typescript_rust/src/compiler/parser/: for_each_child.rs  for_each_child_returns.rs  lines_0_500.rs  lines_1000_2000.rs  lines_2000_3000.rs  lines_3000_4000.rs  lines_4000_5000.rs  lines_5000_5500.rs  lines_500_1000.rs  lines_5500_6000.rs  lines_6000_6500.rs  lines_6500_7000.rs  lines_7000_7500.rs  lines_7500_8000.rs  lines_8000_9000.rs  lines_9000_end.rs  mod.rs
typescript_rust/src/compiler/program/: lines_0_500.rs  lines_1000_2000.rs  lines_2000_2500.rs  lines_2500_3000.rs  lines_3000_end.rs  lines_500_1000.rs  mod.rs
typescript_rust/src/compiler/scanner/: lines_0_500.rs  lines_1000_2000.rs  lines_2000_end.rs  lines_500_1000.rs  mod.rs
typescript_rust/src/compiler/transformers/: class_fields.rs  declarations.rs  destructuring.rs  es2015.rs  es2016.rs  es2017.rs  es2018.rs  es2019.rs  es2020.rs  es2021.rs  es5.rs  esnext.rs  generators.rs  jsx.rs  mod.rs  tagged_template.rs  ts.rs  utilities.rs
typescript_rust/src/compiler/types/: lines_0_500.rs  lines_1000_1500.rs  lines_1500_2000.rs  lines_2000_2500.rs  lines_2500_3000.rs  lines_3000_3500.rs  lines_3500_4000.rs  lines_4000_5000.rs  lines_5000_5250.rs  lines_500_1000.rs  lines_5250_5500.rs  lines_5500_6000.rs  lines_6000_6500.rs  lines_6500_7000.rs  lines_7000_8000.rs  lines_8000_end.rs
typescript_rust/src/compiler/utilities/: lines_0_1000.rs  lines_1000_1500.rs  lines_1500_2000.rs  lines_2000_2500.rs  lines_2500_3000.rs  lines_3000_4000.rs  lines_4000_4500.rs  lines_4500_5000.rs  lines_5000_6000.rs  lines_6000_7000.rs  lines_7000_end.rs
typescript_rust/src/compiler/visitor_public/: mod.rs  try_visit_each_child.rs  visit_each_child.rs
typescript_rust/src/execute_command_line/execute_command_line/: lines_0_500.rs  lines_500_end.rs  mod.rs
typescript_rust/src/rust_helpers/: arena.rs  cell.rs  combinators.rs  debugging.rs  default.rs  deref.rs  hash_map.rs  io.rs  iterator.rs  mod.rs  number.rs  option.rs  regex.rs  source_text.rs  string.rs  sys.rs  uri.rs  vec.rs  weak_self.rs
typescript_rust/src/rust_helpers/arena/: all_arenas.rs  arena_alloc.rs  has_arena.rs  in_arena.rs  mod.rs  option_in_arena.rs
typescript_rust/tests/: baseline.rs
typescript_services_rust/: Cargo.toml
typescript_services_rust/src/: lib.rs
typescript_services_rust/src/server/: editor_services.rs  session.rs  types.rs  typings_cache.rs  utilities_public.rs
typescript_services_rust/src/services/: mod.rs  services.rs  utilities.rs
typescript_services_rust/src/tsserver/: server.rs
(+420 files in other folders)
