[package]
name = "tsc-rust"
version = "0.1.0"
edition = "2018"
default-run = "tsc-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
derive_builder = "0.10.2"
fancy-regex = "0.10.0"
lazy_static = "1.4.0"
local-macros = { path = "local-macros" }
regex = "1.5.4"
serde = { version = "1.0.133", features = ["derive", "rc"] }
serde_json = "1.0.74"

[lib]
name = "typescript_rust"

[[bin]]
name = "tsc-rust"
