[workspace]
members = [
    "typescript_rust",
    "typescript_services_rust",
    "local-macros",
    "harness",
    "test_runner",
]
resolver = "2"

[profile.test]
# opt-level = 3
# codegen-units = 16

[profile.release]
# debug = true

[profile.dev]
# opt-level = 3
# debug = false
# # split-debuginfo = '...'  # Platform-specific.
# strip = false
# debug-assertions = false
# overflow-checks = false
# lto = false
# panic = 'unwind'
# incremental = false
# codegen-units = 16
# rpath = false
