[package]
name = "harness"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
clap = { version = "4.0.29", features = ["derive"] }
fancy-regex = "0.10.0"
futures = "0.3.25"
gc = { git = "https://github.com/helixbass/rust-gc", rev = "32dfa44", features = ["derive", "serde"] }
lazy_static = "1.4.0"
local-macros = { path = "../local-macros" }
once_cell = "1.16.0"
pretty_assertions = "1.3.0"
regex = "1.5.4"
tokio = { version = "1.23.0", features = ["full"] }
tokio-stream = "0.1.11"
typescript_rust = { path = "../typescript_rust" }
typescript_services_rust = { path = "../typescript_services_rust" }

[dev-dependencies]
pretty_assertions = "1.3.0"

[lib]
name = "harness"
