[package]
name = "harness"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
clap = { version = "4.0.29", features = ["derive"] }
fancy-regex = "0.10.0"
futures = "0.3.25"
# gc = { git = "https://github.com/manishearth/rust-gc", rev = "6c5f754", features = ["derive", "serde"] }
# gc = { path = "../../rust-gc/gc", features = ["derive", "serde", "unstable-config"] }
gc = { git = "https://github.com/helixbass/rust-gc", rev = "2214d68", features = ["derive", "serde"] }
lazy_static = "1.4.0"
local-macros = { path = "../local-macros" }
once_cell = "1.16.0"
pretty_assertions = "1.3.0"
regex = "1.5.4"
threadpool = "1.8.1"
typescript_rust = { path = "../typescript_rust" }
typescript_services_rust = { path = "../typescript_services_rust" }
itertools = "0.10.5"
derive_builder = "0.10.2"

[dev-dependencies]
pretty_assertions = "1.3.0"

[lib]
name = "harness"
