[package]
name = "test_runner"
version = "0.1.0"
edition = "2021"
default-run = "runner"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
harness = { path = "../harness" }
typescript_rust = { path = "../typescript_rust" }
lazy_static = "1.4.0"
regex = "1.5.4"
clap = { version = "4.0.29", features = ["derive"] }

[dev-dependencies]

[lib]
name = "test_runner"

[[bin]]
name = "runner"
