[package]
name = "test_runner"
version = "0.1.0"
edition = "2021"
default-run = "runner"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
harness = { path = "../harness" }
typescript_rust = { path = "../typescript_rust" }
lazy_static = "1.4.0"
regex = "1.5.4"
clap = { version = "4.0.29", features = ["derive"] }
tokio = { version = "1.23.0", features = ["full"] }
itertools = "0.10.5"
once_cell = "1.17.1"
derive_builder = "0.10.2"
indexmap = "2.2.2"
serde = { version = "1.0.133", features = ["derive", "rc"] }
serde_json = "1.0.74"
jsonxf = "1.1.1"

[dev-dependencies]
speculoos = "0.11.0"

[lib]
name = "test_runner"

[[bin]]
name = "runner"
