[package]
name = "typescript_rust"
version = "0.1.0"
edition = "2021"
default-run = "tsc-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
derive_builder = "0.10.2"
fancy-regex = "0.10.0"
lazy_static = "1.4.0"
local-macros = { path = "../local-macros" }
regex = "1.5.4"
serde = { version = "1.0.133", features = ["derive", "rc"] }
serde_json = "1.0.74"
indexmap = { path = "../../indexmap", features = ["gc"] }
encoding_rs = "0.8.31"
encoding_rs_io = "0.1.7"
itertools = "0.10.5"
once_cell = "1.17.1"
uri_encode = "1.0.1"
base64 = "0.21.0"
peekmore = { version = "1.2.1", features = ["smallvec"] }
either_n = "0.2.0"
id-arena = "2.2.1"
debug-cell = { git = "https://github.com/helixbass/debug-cell", rev = "b40e3d1" }

[dev-dependencies]
rstest = "0.15.0"
pretty_assertions = "1.3.0"

[lib]
name = "typescript_rust"

[[bin]]
name = "tsc-rust"
