[package]
name = "typescript_services_rust"
version = "0.1.0"
edition = "2021"
default-run = "tsserver-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
squalid = { git = "https://github.com/helixbass/squalid", rev = "c079b88" }
# tsc-rust = { git = "https://github.com/helixbass/tsc-rust", rev = "fa1079d5" }
typescript_rust = { path = "../typescript_rust" }
# gc = { git = "https://github.com/manishearth/rust-gc", rev = "6c5f754", features = ["derive", "serde"] }
# gc = { path = "../../rust-gc/gc", features = ["derive", "serde", "unstable-config"] }
gc = { git = "https://github.com/helixbass/rust-gc", rev = "07e9c2a", features = ["derive", "serde"] }

[lib]
name = "typescript_services_rust"

[[bin]]
name = "tsserver-rust"
